--- a/public/index.html
+++ b/public/index.html
@@ -18,5 +18,6 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://www.paypal.com/sdk/js?client-id=ARC9EimTFv6eHfgZ-2cib8KaE3dzTVwyPuLkxxbmJArgO7jfQvtDXo9eoc7chCcYrR_Tc2hroOAfV-SF"></script>
   </body>
 </html>
